[project]
name = "traffic_models"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cftime>=1.6.5",
    "dotenv>=0.9.9",
    "filterpy>=1.4.5",
    "geopandas>=1.1.1",
    "ipykernel>=6.29.5",
    "ipympl>=0.9.7",
    "ipywidgets>=8.1.5",
    "matplotlib>=3.10.1",
    "meson>=1.10.0",
    "nbformat>=5.10.4",
    "ninja>=1.13.0",
    "numpy>=2.2.3",
    "omegaconf>=2.3.0",
    "osmnx>=2.0.6",
    "pandas>=2.2.3",
    "plotly>=6.0.0",
    "polars>=1.24.0",
    "pyarrow>=21.0.0",
    "pytest>=8.3.5",
    "python-dateutil>=2.9.0.post0",
    "pyyaml>=6.0.2",
    "requests>=2.32.3",
    "ruff>=0.11.7",
    "scikit-learn>=1.8.0",
    "scipy>=1.15.2",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.4",
    "tensorboard>=2.19.0",
    "torch>=2.6.0",
    "tqdm>=4.67.1",
    "wandb>=0.21.0",
    "xarray>=2026.2.0",
]

[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["traffic_models"]

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
]

[tool.ruff]
# select = ["I"]

[tool.ruff.lint.isort]
split-on-trailing-comma = false

[tool.ruff.format]
skip-magic-trailing-comma = true
